--- a/cordel.html
+++ b/cordel.html
@@ -136,7 +136,7 @@
         </section>
     </main>
     <footer>
-        <p>Site criado por <a href="https://www.instagram.com/matheus_eg/" target="_blank">Matheus Escobozo</a> para o <a href="https://github.com/MatheusEscobozo" target="_blank">GitHub</a></p>
+        <p>Site criado por <a href="https://www.instagram.com/matheus_eg/" target="_blank">Matheus Escobozo</a> para o <a href="https://github.com/matheuscobz" target="_blank">GitHub</a></p>
     </footer>
 </body>
 </html>
